# capsule

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/tests/: Cargo.toml
crates/tests/src/: testtool.rs
crates/tests/test-contract/contracts/test-contract/: Cargo.toml
crates/tests/test-contract/contracts/test-contract/test-contract-dbg/: Cargo.toml
crates/tests/test-contract/contracts/test-contract/test-contract-dbg/src/: lib.rs
crates/testtool/: Cargo.toml
crates/testtool/src/: context.rs
src/util/: docker.rs
templates/rust/contract/: Cargo-manifest.toml
templates/rust/tests/: Cargo-manifest.toml
