[package]
name = "test-contract-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
test-contract = { path = "../", features = ["simulator"] }
ckb-std = { version = "0.15.3", features = ["simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]

[replace]
"ckb-std:0.15.3" = { path = "/home/joii/code/ckb-std" }
"ckb-x64-simulator:0.8.0" = { path = "/home/joii/code/ckb-x64-simulator" }